kong/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-kong
  namespace: week2
  annotations:
    konghq.com/preserve-host: "false"
    konghq.com/plugins: frontend-key-auth
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8081
